# plotplot

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
frontend/: package.json
frontend/custom-plotly.js/: package.json  plotly.min.js
frontend/public/: bulk_import_example.txt  bulk_import_example.xlsx  index.html  manifest.json
frontend/src/: App.css  App.js  FileDropBox.jsx  index.js  setupProxy.js  utility.js
frontend/src/Plotplot/: ColorPicker.jsx  ColorWheel.jsx  CsvExportDialog.jsx  ErrorBoundary.jsx  FormattedNumberWithOverlay.jsx  ItemTypes.js  MarkerPropertiesDropdown.jsx  MathBox.jsx  Plotplot.jsx  ReportBugDialog.jsx  ScreenshotDialog.jsx  SearchBoxWithClearButton.jsx  SubsetList.jsx
frontend/src/Plotplot/FilterDialog/: FilterDialog.jsx  FilterRow.jsx
frontend/src/Plotplot/PlotGroup/: AxisLogSwitch.jsx  ColorBarLegend.jsx  DropArea.jsx  PlotGroup.jsx  PlotGroupUtils.jsx  Polygon.js  PrepPlot.jsx
frontend/src/Plotplot/VariableList/: Box.jsx  VariableList.jsx
plotplot/: .flaskenv  anndata_shim.py  api_utils.py  backend.py  db.py  gdrive_cloud.py  gdrive_download_thread.py  globals.py  load_and_resume.py  load_csv_thread.py  login.py  plotplot.py  plotplot_config.py  point_in_polygon.py  requirements.txt  session_worker.py  user.py
