
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "plotplot"
version = "1.0.1"
description = "Drag and drop plotting, data selection, and filtering"
authors = ["Andrew Barry <barrya@broadinstitute.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://plotplot.org"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
include = [
  "plotplot",
  "frontend/build/**/*",
]

[tool.poetry.dependencies]
python = ">=3.8"
shapely = "2.0.1"
pandas = "1.5.3"
Flask = "2.1.3"
Flask-Login = "0.4.1"
numba = "*"
numpy = "1.23.5"
gunicorn = "20.1.0"
plotly = "5.13.1"
datashader = "*"
oauthlib = "3.2.2"
pyOpenSSL = "23.1.1"
requests = "2.28.2"
google-api-python-client = "2.83.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
oauth2client = "4.1.3"
Werkzeug = "2.0.3"
line_profiler = "*"
anndata = "*"
polyleven = "*"
platformdirs = "*"
waitress = "*"



[tool.poetry.scripts]
plotplot = "plotplot.plotplot:main"

